# gsaligner

./: .gitignore  README.md  ext.cpp  pyproject.toml  setup.py  test_gsaligner.py
gsaligner/: CMakeLists.txt  __init__.py  aligner.cu  aligner.h  aligner_utils.cu  aligner_utils.cuh  gsaligner_impl.h
gsaligner/apps/: registration.py
gsaligner/registration/: geometric.h  photometric.cpp  photometric.cuh  photometric_cuda.cu  vel_estimator.h
gsaligner/src/: CMakeLists.txt
gsaligner/src/pybind/: CMakeLists.txt  gsaligner.h  pygsaligner.cpp
gsaligner/src/registration/: CMakeLists.txt  geometric.cpp  photometric.cpp  photometric.cuh  vel_estimator.cpp  vel_estimator.h
gsaligner/src/tools/: CMakeLists.txt  cuda_utils.cuh  dual_matrix.cuh  image_set.cuh  lie_algebra.h  mad_tree.h  utils.cuh
gsaligner/tests/: CMakeLists.txt  test_photometric.cu
gsaligner/tools/: image_set.cpp  image_set.cuh  image_set_impl.cu  lie_algebra.h  linear_system_entry.h  mad_tree.h  sum_reduce.cu  utils.h  utils_photo.cuh
test_data/gsaligner_data/: K_ref.npy  cloud_query.ply  cloud_ref.ply  normals_ref.npy
tests/: test_gsaligner.py
tests/data/: depth_query.npy  depth_ref.npy
