[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "gsaligner"
version = "0.0.1"
description = "GS Aligner"
readme = "README.md"
authors = [
    { name = "Luca Di Giammarino", email = "digiammarino@diag.uniroma1.it" },
    { name = "Emanuele Giacomini", email = "giacomini@diag.uniroma1.it" },
]
keywords = ["LiDAR"]
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "PyYAML",
    "numpy",
    "rosbags",
    "open3d",
    "typer",
    "natsort",
    "rich",
]

[project.scripts]
mad_icp = "gsaligner.apps.gsaligner:run"

[project.urls]
Homepage = ""

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.source-dir = "gsaligner/"
cmake.verbose = false
cmake.version = ">=3.8"
wheel.install-dir = "gsaligner/src/pybind"
